fix gap at bottom of footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
     position:absolute;
     text-align: center;
     justify-content: space-evenly;
-    bottom:0;
+    bottom:-18px;
     width:100%;
     height:60px;
     background:rgb(223, 171, 29);
